# url-shortener

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
shortener/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
shortener/templates/: 404.html  base.html  form.html  thanks.html
website/: asgi.py  settings.py  urls.py  wsgi.py
